# RomiServerAlpha

./: .cpp  .gitignore  .gitmodules  .hpp  CMakeLists.txt  LICENSE  MyClass.cpp.template  MyClass.hpp.template  README.md  newclass.sh
includes/: defines.hpp  exception.hpp  romi.hpp  romi_types.hpp  std.hpp  utility.hpp
includes/concurrent/: interlocked.hpp
includes/container/: msqueue.hpp
includes/error/: errorutils.hpp  exception.hpp  invalidoperationexception.hpp  runtimeexception.hpp  socketexception.hpp
includes/server/: acceptor.hpp  server.hpp  serverthread.hpp  socket.hpp
includes/server/io/: eventport.hpp  eventportthread.hpp  isocketacceptorcallback.hpp  isocketcallback.hpp  isocketport.hpp  socketacceptor.hpp  socketclient.hpp
includes/server/io/bsd/: queuecontext.hpp  queuehost.hpp  queuethread.hpp
includes/server/io/win/: iocp.hpp  iocpthread.hpp
includes/utility/: exception.hpp
includes/utils/: inpacket.hpp  netutils.hpp  outpacket.hpp
srcs/: CMakeLists.txt  main.cpp  main.cpp.old  romi.cpp  test.cpp  win.cpp
srcs/concurrent/: interlocked.cpp
srcs/error/: CMakeLists.txt  errorutils.cpp  exception.cpp  invalidoperationexception.cpp  runtimeexception.cpp  socketexception.cpp
srcs/server/: acceptor.cpp  server.cpp  serverthread.cpp
srcs/server/io/: eventport.cpp  eventportthread.cpp  socketclient.cpp
srcs/server/io/bsd/: queuehost.cpp  queuethread.cpp
srcs/server/io/win/: iocp.cpp  iocpthread.cpp
srcs/utility/: exception.cpp
srcs/utils/: inpacket.cpp  netutils.cpp  outpacket.cpp
